# alva_chat

./: .gitignore  LICENSE  README.md
alva_chat_app/: README.md  pubspec.yaml
alva_chat_app/android/app/: build.gradle
alva_chat_app/android/app/src/main/: AndroidManifest.xml
alva_chat_app/android/app/src/main/kotlin/com/example/alva_chat_app/: MainActivity.kt
alva_chat_app/integration_test/: simple_test.dart
alva_chat_app/ios/Runner/: Info.plist
alva_chat_app/ios/Runner.xcodeproj/: project.pbxproj
alva_chat_app/lib/: main.dart
alva_chat_app/lib/src/examples/: mandelbrot.dart
alva_chat_app/lib/src/ignore_me/: mandelbrot_related.dart
alva_chat_app/lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
alva_chat_app/lib/src/rust/api/: conversation.dart  llama_model.dart
alva_chat_app/lib/src/ui/: chat_page.dart
alva_chat_app/linux/: CMakeLists.txt  my_application.cc
alva_chat_app/linux/flutter/: generated_plugins.cmake
alva_chat_app/macos/Runner.xcodeproj/: project.pbxproj
alva_chat_app/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
alva_chat_app/macos/Runner/Configs/: AppInfo.xcconfig
alva_chat_app/rust/: Cargo.toml
alva_chat_app/rust/src/: frb_generated.rs
alva_chat_app/rust/src/api/: llama_model.rs  mod.rs
alva_chat_app/rust_builder/: pubspec.yaml
alva_chat_app/rust_builder/android/: build.gradle  settings.gradle
alva_chat_app/rust_builder/android/src/main/: AndroidManifest.xml
alva_chat_app/rust_builder/ios/: rust_lib_alva_chat_app.podspec
alva_chat_app/rust_builder/linux/: CMakeLists.txt
alva_chat_app/rust_builder/macos/: rust_lib_alva_chat_app.podspec
alva_chat_app/rust_builder/windows/: CMakeLists.txt
alva_chat_app/web/: index.html  manifest.json
alva_chat_app/windows/: CMakeLists.txt
alva_chat_app/windows/flutter/: generated_plugins.cmake
alva_chat_app/windows/runner/: Runner.rc  main.cpp
svaroh/: Cargo.toml  Dioxus.toml  README.md  tailwind.config.js
svaroh/assets/: tailwind.css
svaroh/src/: api.rs  app.rs  main.rs  routs.rs  server.rs
svaroh/src/components/: chat.rs  error.rs  home.rs  item_detailed.rs  nav_bar.rs  not_found.rs
svaroh/src/pages/: blog.rs  home.rs  mod.rs  not_found.rs
svaroh/src/server/: home_server.rs  mod.rs
veles/: Cargo.toml  Dioxus.toml
veles/public/: tailwind.css
veles/src/: main.rs
