[package]
name = "svaroh"
version = "0.1.0"
authors = ["Dmytro Kravchyna <dmytro.kravchyna@rib-software.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
manganis = { version = "0.2.2" }
dioxus = { version = "0.5", features = ["fullstack", "router"] }

# Debug
tracing = "0.1.40"
dioxus-logger = "0.5.0"

[features]
default = []
server = ["dioxus/axum"]
web = ["dioxus/web"]
