[package]
name = "svaroh"
version = "0.1.0"
authors = ["Dmytro Kravchyna <dmytro.kravchyna@rib-software.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
chrono = { version = "0.4.38", features = ["serde"] }
manganis = { version = "0.2.2" }
dioxus = { version = "0.5", features = ["fullstack", "router"] }

# cached = "0.51.3"
reqwest = { version = "0.12.4", features = ["json"] }

# Debug
tracing = "0.1.40"
dioxus-logger = "0.5"

# [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# dioxus = { version = "0.5", features = ["desktop", "router"] }

# [target.'cfg(target_arch = "wasm32")'.dependencies]
# dioxus = { version = "0.5", features = ["fullstack", "router"] }

[features]
default = []
server = ["dioxus/axum"]
web = ["dioxus/web"]
