[package]
name = "svaroh"
version = "0.1.0"
authors = ["Dmytro Kravchyna <dmytro.kravchyna@rib-software.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
chrono = { version = "0.4.38", features = ["serde"] }
# cached = "0.51.3"
reqwest = { version = "0.12.4", features = ["json"] }

# Debug
tracing = "0.1.40"
dioxus-logger = "0.5"

# Dioxus
manganis = { version = "0.2.2" }
# dioxus = { version = "0.5", features = ["web", "router"] }
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dioxus = { git = "https://github.com/DioxusLabs/dioxus.git", features = ["desktop", "router"] }
[target.'cfg(target_arch = "wasm32")'.dependencies]
dioxus = { git = "https://github.com/DioxusLabs/dioxus.git", features = ["web", "router"] }

# [unstable]
# build-std = ["std", "panic_abort", "core", "alloc"]
# build-std-features = ["panic_immediate_abort"]

# [build]
# rustflags = [
#     "-Clto",
#     "-Zvirtual-function-elimination",
#     "-Zlocation-detail=none"
# ]

[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false

[features]
default = []
server = ["dioxus/axum"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
