[package]
name = "veles"
version = "0.1.0"
authors = ["Dmytro Kravchyna <dmytro.kravchyna@rib-software.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.201", features = ["derive"] }
manganis = "0.2.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# dioxus = { git = "https://github.com/DioxusLabs/dioxus.git", branch = "main", features = ["desktop", "router" ] }
dioxus = { version = "0.5.1", features = ["desktop", "router"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
# dioxus = { git = "https://github.com/DioxusLabs/dioxus.git", branch = "main", features = ["fullstack", "router"] } 
# dioxus = { git = "https://github.com/DioxusLabs/dioxus.git", branch = "main", features = ["web", "router"] } 
dioxus = { version = "0.5.1", features = ["web", "router"] }

# Debug
tracing = "0.1.40"
dioxus-logger = "0.5.0"

[features]
default = []
server = ["dioxus/axum"]
web = ["dioxus/web"]