[package]
name = "rust_lib_alva_chat_app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.0.0-dev.33"
serde = { version = "1.0.200", features = ["derive"] } 
llm = { git = "https://github.com/rustformers/llm.git", branch = "main", optional = true, features = [
    "metal",
] }

[profile.dev.package.ggml-sys]
opt-level = 3